alterado links nos icons github/linkedin

--- a/index.html
+++ b/index.html
@@ -1,67 +1,116 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boas vindas!</title>
-  <meta name="description" content="Estudante de desenvolvimento FullStack localizado em São Paulo">
-  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-  <link rel="manifest" href="./site.webmanifest">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-<body>
-  <header>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Boas vindas!</title>
+    <meta
+      name="description"
+      content="Estudante de desenvolvimento FullStack localizado em São Paulo"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+  </head>
+  <body>
+    <header>
       <p>Gab Off</p>
-  </header>
-  <main>
-    <div class="container flex">
-      <div class="l-side">
-        <h1>Bem-vindo(a) ao meu espaço digital.</h1>
-        <p class="p-1">
-          Meu nome é Gabriel, tenho 28 anos, estudante da Etec no curso de Desenvolvimento de Sistemas, dedicado à construção de soluções tecnológicas eficientes e à exploração de novas ferramentas no universo da programação.
-        </p>
-        <p>
-          Estou construindo esse espaço para mostrar um pouco do que estou fazendo, estudando, pensando, com meu portfólio sendo apresentado para mostrar meus projetos e meu crescimento no aprendizado dentro da área.
-        </p>
+    </header>
+    <main>
+      <div class="container flex">
+        <div class="l-side">
+          <h1>Bem-vindo(a) ao meu espaço digital.</h1>
+          <p class="p-1">
+            Meu nome é Gabriel, tenho 28 anos, estudante da Etec no curso de
+            Desenvolvimento de Sistemas, dedicado à construção de soluções
+            tecnológicas eficientes e à exploração de novas ferramentas no
+            universo da programação.
+          </p>
+          <p>
+            Estou construindo esse espaço para mostrar um pouco do que estou
+            fazendo, estudando, pensando, com meu portfólio sendo apresentado
+            para mostrar meus projetos e meu crescimento no aprendizado dentro
+            da área.
+          </p>
 
-        <a class="btn-portf" href="https://portfolio.gaboff.dev.br/">Acessar Portfólio</a>
+          <a class="btn-portf" href="https://portfolio.gaboff.dev.br/"
+            >Acessar Portfólio</a
+          >
+        </div>
+
+        <div class="r-side">
+          <img class="icon-principal" src="./img/icon-principal.png" />
+          <ul>
+            <li>
+              <a href="https://github.com/Gab-off" target="_blank"
+                ><svg
+                  width="100"
+                  height="100"
+                  viewBox="0 0 100 100"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_1_30)">
+                    <path
+                      d="M79.1667 0H20.8333C9.32917 0 0 9.32917 0 20.8333V79.1667C0 90.6708 9.32917 100 20.8333 100H79.1667C90.675 100 100 90.6708 100 79.1667V20.8333C100 9.32917 90.675 0 79.1667 0ZM60.5583 81.625C58.8708 81.95 58.3333 80.9125 58.3333 80.025V70.8792C58.3333 67.7667 57.2417 65.7417 56.0417 64.7083C63.4667 63.8833 71.2667 61.0625 71.2667 48.2625C71.2667 44.6208 69.9667 41.6458 67.8375 39.3167C68.1792 38.475 69.3208 35.0833 67.5083 30.4958C67.5083 30.4958 64.7125 29.6 58.35 33.9125C55.6833 33.1625 52.8333 32.8 50 32.7833C47.1667 32.7958 44.3167 33.1625 41.6542 33.9042C35.2875 29.5917 32.4875 30.4875 32.4875 30.4875C30.6792 35.0792 31.8208 38.4667 32.1667 39.3125C30.0333 41.6458 28.7333 44.6167 28.7333 48.2583C28.7333 61.025 36.5125 63.8875 43.9208 64.7333C42.9667 65.5667 42.1042 67.0333 41.8042 69.1917C39.9 70.0417 35.0792 71.5125 32.1042 66.4167C32.1042 66.4167 30.3417 63.2167 26.9917 62.9792C26.9917 62.9792 23.7417 62.9375 26.7625 65.0083C26.7625 65.0083 28.95 66.0333 30.4667 69.8833C30.4667 69.8833 32.3958 75.8333 41.6667 73.8167V80.0208C41.6667 80.9 41.1292 81.9333 39.4667 81.625C26.2167 77.2208 16.6667 64.725 16.6667 50C16.6667 31.5875 31.5917 16.6667 50 16.6667C68.4083 16.6667 83.3333 31.5875 83.3333 50C83.3333 64.7208 73.7958 77.2125 60.5583 81.625Z"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_1_30">
+                      <rect width="100" height="100" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/gab-off-dev/" target="_blank"
+                ><svg
+                  width="100"
+                  height="100"
+                  viewBox="0 0 100 100"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_1_32)">
+                    <path
+                      d="M79.1667 0H20.8333C9.32917 0 0 9.32917 0 20.8333V79.1667C0 90.6708 9.32917 100 20.8333 100H79.1667C90.675 100 100 90.6708 100 79.1667V20.8333C100 9.32917 90.675 0 79.1667 0ZM33.3333 79.1667H20.8333V33.3333H33.3333V79.1667ZM27.0833 28.05C23.0583 28.05 19.7917 24.7583 19.7917 20.7C19.7917 16.6417 23.0583 13.35 27.0833 13.35C31.1083 13.35 34.375 16.6417 34.375 20.7C34.375 24.7583 31.1125 28.05 27.0833 28.05ZM83.3333 79.1667H70.8333V55.8167C70.8333 41.7833 54.1667 42.8458 54.1667 55.8167V79.1667H41.6667V33.3333H54.1667V40.6875C59.9833 29.9125 83.3333 29.1167 83.3333 51.0042V79.1667Z"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_1_32">
+                      <rect width="100" height="100" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-
-      <div class="r-side">
-        <img class="icon-principal" src="./img/icon-principal.png">
-        <ul>
-          <li><a href="https://www.linkedin.com/in/gab-off/" target="_blank"><svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-<g clip-path="url(#clip0_1_30)">
-<path d="M79.1667 0H20.8333C9.32917 0 0 9.32917 0 20.8333V79.1667C0 90.6708 9.32917 100 20.8333 100H79.1667C90.675 100 100 90.6708 100 79.1667V20.8333C100 9.32917 90.675 0 79.1667 0ZM60.5583 81.625C58.8708 81.95 58.3333 80.9125 58.3333 80.025V70.8792C58.3333 67.7667 57.2417 65.7417 56.0417 64.7083C63.4667 63.8833 71.2667 61.0625 71.2667 48.2625C71.2667 44.6208 69.9667 41.6458 67.8375 39.3167C68.1792 38.475 69.3208 35.0833 67.5083 30.4958C67.5083 30.4958 64.7125 29.6 58.35 33.9125C55.6833 33.1625 52.8333 32.8 50 32.7833C47.1667 32.7958 44.3167 33.1625 41.6542 33.9042C35.2875 29.5917 32.4875 30.4875 32.4875 30.4875C30.6792 35.0792 31.8208 38.4667 32.1667 39.3125C30.0333 41.6458 28.7333 44.6167 28.7333 48.2583C28.7333 61.025 36.5125 63.8875 43.9208 64.7333C42.9667 65.5667 42.1042 67.0333 41.8042 69.1917C39.9 70.0417 35.0792 71.5125 32.1042 66.4167C32.1042 66.4167 30.3417 63.2167 26.9917 62.9792C26.9917 62.9792 23.7417 62.9375 26.7625 65.0083C26.7625 65.0083 28.95 66.0333 30.4667 69.8833C30.4667 69.8833 32.3958 75.8333 41.6667 73.8167V80.0208C41.6667 80.9 41.1292 81.9333 39.4667 81.625C26.2167 77.2208 16.6667 64.725 16.6667 50C16.6667 31.5875 31.5917 16.6667 50 16.6667C68.4083 16.6667 83.3333 31.5875 83.3333 50C83.3333 64.7208 73.7958 77.2125 60.5583 81.625Z"/>
-</g>
-<defs>
-<clipPath id="clip0_1_30">
-<rect width="100" height="100" fill="white"/>
-</clipPath>
-</defs>
-</svg>
-</a></li>
-          <li><a href="https://github.com/Gab-off" target="_blank"><svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-<g clip-path="url(#clip0_1_32)">
-<path d="M79.1667 0H20.8333C9.32917 0 0 9.32917 0 20.8333V79.1667C0 90.6708 9.32917 100 20.8333 100H79.1667C90.675 100 100 90.6708 100 79.1667V20.8333C100 9.32917 90.675 0 79.1667 0ZM33.3333 79.1667H20.8333V33.3333H33.3333V79.1667ZM27.0833 28.05C23.0583 28.05 19.7917 24.7583 19.7917 20.7C19.7917 16.6417 23.0583 13.35 27.0833 13.35C31.1083 13.35 34.375 16.6417 34.375 20.7C34.375 24.7583 31.1125 28.05 27.0833 28.05ZM83.3333 79.1667H70.8333V55.8167C70.8333 41.7833 54.1667 42.8458 54.1667 55.8167V79.1667H41.6667V33.3333H54.1667V40.6875C59.9833 29.9125 83.3333 29.1167 83.3333 51.0042V79.1667Z"/>
-</g>
-<defs>
-<clipPath id="clip0_1_32">
-<rect width="100" height="100" fill="white"/>
-</clipPath>
-</defs>
-</svg>
-</a></li>
-        </ul>
-      </div>
-    </div>
-  </main>
-
-</body>
+    </main>
+  </body>
 </html>
